--- a/blog/app/views/posts/new.html.erb
+++ b/blog/app/views/posts/new.html.erb
@@ -1,2 +1,15 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<%= form_for :post, url: '/posts/create' do |f| %>
+	<p>
+		<%= f.label :title %><br />
+		<%= f.text_field :title %>
+	</p>
+	
+	<p>
+		<%= f.label :content %><br />
+		<%= f.text_area :content %>
+	</p>
+	
+	<p>
+		<%= f.submit %>
+	</p>
+<% end %>
